# live-compositor

./: .dockerignore  .envrc  .gitattributes  .gitignore  .gitmodules  404.html  ASSETS.md  CHANGELOG.md  CNAME  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  RELEASE.md  flake.nix  index.html  opensearch.xml  package-lock.json  playground.html  result  run.sh  search.html  sitemap.xml
compositor_api/: Cargo.toml
compositor_api/src/: error.rs  lib.rs  types.rs
compositor_api/src/types/: component.rs  from_color.rs  from_component.rs  from_register_input.rs  from_register_output.rs  from_util.rs  from_util_test.rs  from_video.rs  register_input.rs  register_output.rs  util.rs  video.rs
compositor_chromium/: CMakeLists.txt  Cargo.toml  build.rs
compositor_chromium/chromium_macros/: Cargo.toml
compositor_chromium/chromium_sys/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  wrapper.h
compositor_chromium/chromium_sys/resources/: Info.plist  helper-Info.plist
compositor_chromium/chromium_sys/src/: bindings_mac.rs  lib.rs
compositor_chromium/examples/: chromium_simple.rs  simple.rs
compositor_chromium/resources/: helper-Info.plist
compositor_chromium/src/: app.rs  browser.rs  cef.rs  cef_ref.rs  cef_string.rs  client.rs  command_line.rs  context.rs  frame.rs  lib.rs  main_args.rs  post_task.rs  process_message.rs  render_handler.rs  render_process_handler.rs  settings.rs  task.rs  utils.rs  v8.rs  v8_context.rs  v8_value.rs  validated.rs  window_info.rs
compositor_chromium/src/v8/: array.rs  array_buffer.rs  bool.rs  context.rs  exception.rs  function.rs  int.rs  numbers.rs  object.rs  other.rs  string.rs  value.rs
compositor_common/: Cargo.toml
compositor_common/src/: error.rs  frame.rs  lib.rs  renderer_spec.rs  scene.rs  transformation.rs  util.rs  validators.rs
compositor_common/src/scene/: builtin_transformations.rs  common_transformations.rs  constraints.rs  id.rs  node.rs  shader.rs  text_params.rs  text_spec.rs  transition.rs  validation.rs  validation_test.rs
compositor_common/src/util/: align.rs  colors.rs  coord.rs  degree.rs  interpolation.rs
compositor_common/src/validators/: test.rs  tests.rs
compositor_integration_tests/: Cargo.toml  log
compositor_integration_tests/src/: audio_decoder.rs  common.rs  compositor_instance.rs  helpers.rs  lib.rs  output_receiver.rs  test_runner.rs  tests.rs  validation.rs  video.rs
compositor_integration_tests/src/tests/: audio_mixing.rs  muxed_video_audio.rs  push_entire_input_before_start.rs  required_inputs.rs  schedule_update.rs  simple.rs  unregistering.rs
compositor_pipeline/: Cargo.toml
compositor_pipeline/src/: audio_mixer.rs  error.rs  event.rs  event_loop.rs  lib.rs  map.rs  pipeline.rs  queue.rs
compositor_pipeline/src/audio_mixer/: internal_audio_mixer.rs  mix.rs  prepare_inputs.rs  types.rs
compositor_pipeline/src/pipeline/: decoder.rs  encoder.rs  graphics_context.rs  input.rs  output.rs  pipeline_input.rs  pipeline_output.rs  rtp.rs  structs.rs  types.rs  whip_whep.rs
compositor_pipeline/src/queue/: audio_queue.rs  audio_queue_thread.rs  internal_queue.rs  queue_thread.rs  utils.rs  video_queue.rs  video_queue_thread.rs
compositor_render/: Cargo.toml
compositor_render/examples/: silly.rs  silly.wgsl  silly_shader.rs
compositor_render/examples/silly/: silly.wgsl
compositor_render/src/: error.rs  event_handler.rs  event_loop.rs  frame_set.rs  gpu_shader.rs  input_frames.rs  lib.rs  mixer.rs  registry.rs  render_loop.rs  renderer.rs  scene.rs  state.rs  sync_renderer.rs  text_renderer.rs  transformations.rs  types.rs  utils.rs  validation.rs  wgpu.rs
compositor_render/src/gpu_shader/: params_buffer.rs  pipeline.rs  shader_header.wgsl  validation.rs
compositor_render/src/mixer/: audio_mixer.rs
compositor_render/src/renderer/: bgra_to_rgba.wgsl  color_converter_pipeline.rs  common_pipeline.rs  format.rs  node.rs  render_graph.rs  render_loop.rs  renderers.rs  rgba_to_yuv.wgsl  scene.rs  texture.rs  transformation.rs  transformations_registry.rs  utils.rs
compositor_render/src/scene/: components.rs  image_component.rs  input_stream_component.rs  layout.rs  non_layout_components.rs  rescaler_component.rs  scene_state.rs  shader_component.rs  text_component.rs  tiles_component.rs  transition.rs  types.rs  validation.rs  view_component.rs  web_view_component.rs
compositor_render/src/shader_executor/: pipeline.rs
compositor_render/src/state/: node.rs  render_graph.rs  render_loop.rs
compositor_render/src/transformations/: builtin.rs  image_renderer.rs  layout.rs  mod.rs  shader.rs  (+6 more)
compositor_snapshot_test/: Cargo.toml
compositor_snapshot_test/src/: lib.rs  test_runner.rs  utils.rs
compositor_web/: Cargo.toml
compositor_web/example/: index.html
compositor_web/src/: lib.rs  wasm.rs
generate/: .gitignore  Cargo.toml
generate/src/: compositor_instance.rs  lib.rs  packet_sender.rs
integration_tests/: .gitignore  Cargo.toml
integration_tests/examples/: aac_rtp_input.rs  audio.rs  corners_rounding.wgsl  decklink.rs  docker.rs  easy_test.rs  encoded_channel_output.rs  encoded_output.rs  hls.rs  image.rs  manual_graphics_initialization.rs  mp4.rs  mp4_hw_dec.rs  pass_through.rs  raw_channel_input.rs  raw_channel_output.rs  receive_udp.rs  rescaler_border_transition.rs  round_corners_dynamic.wgsl  rtmp.rs  rtp_tcp.rs  runtime_test.rs  samples_demo.rs  send_udp.rs  showcase.rs  showcase_code.wgsl  silly.wgsl  simple.rs  test_pattern.rs  text.rs  tiles.rs  transition.rs  transition2.rs  video.sdp  view_border_transition.rs  vulkan.rs  web_view.rs  wgpu_textures_output.rs  whip.rs  whip_client.rs  (+1 more)
integration_tests/src/: common.rs  compositor_instance.rs  examples.rs  ffmpeg.rs  ffmpeg_utils.rs  gstreamer.rs  gstreamer_utils.rs  lib.rs  output_receiver.rs  packet_sender.rs  test_input.rs  tests.rs  texture.rs  utils.rs  validation.rs  video_decoder.rs
vk-video/: .gitignore  Cargo.toml  README.md  build.rs
vk-video/examples/: basic.rs  print_hw_capabilities.rs  wgpu.rs
vk-video/src/: lib.rs  parser.rs  vulkan_decoder.rs  vulkan_encoder.rs
(+2769 files in other folders)
