[package]
name = "video_compositor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["compositor_render", "compositor_pipeline", "compositor_chromium"]
resolver = "2"

[features]
default = ["web_renderer"]
web_renderer = ["dep:compositor_chromium", "compositor_render/web_renderer"]

[workspace.dependencies]
bytes = "1.4.0"
env_logger = "0.10.0"
serde_json = { version = "1.0.99", features = ["preserve_order"] }
serde = { version = "1.0.164", features = ["derive", "rc"] }
log = "0.4.19"
thiserror = "1.0.40"
crossbeam-channel = "0.5.8"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
signal-hook = "0.3.15"
shared_memory = "0.12.4"
ffmpeg-next = "6.1.0"
anyhow = "1.0.71"
image = { version = "0.24.7", features = ["jpeg", "png"] }
rtp = "0.9.0"

[dependencies]
compositor_render = { path = "compositor_render" }
compositor_pipeline = { path = "compositor_pipeline" }
compositor_chromium = { path = "compositor_chromium", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tiny_http = "0.12.0"
ffmpeg-next = { workspace = true }
crossbeam-channel = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
signal-hook = { workspace = true }
shared_memory = { workspace = true }
lazy_static = "1.4.0"
fs_extra = "1.3.0"
schemars = { version = "0.8.15", features = ["preserve_order"] }
image = { workspace = true }
thiserror = { workspace = true }
rtp = { workspace = true }
smol = "1.3.0"
webrtc-util = "0.8.0"
rtcp = "0.10.0"
rand = "0.8.5"

[dev-dependencies]
reqwest = { workspace = true }

[[bin]]
name = "process_helper"
path = "src/bin/process_helper/main.rs"
required-features = ["web_renderer"]
