[package]
name = "compositor_api"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[features]
decklink = ["compositor_pipeline/decklink"]
web_renderer = ["compositor_render/web_renderer"]

[dependencies]
compositor_render = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
bytes = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
compositor_pipeline = { workspace = true }
axum = { version = "0.7.4", features = ["ws"] }

