[package]
name = "compositor_chromium"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chromium_sys = { path = "chromium_sys" }
fs_extra = "1.3.0"
thiserror = { workspace = true }
widestring = "1.0.2"
log = { workspace = true }
anyhow = { workspace = true }
