[package]
name = "compositor_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes =  { workspace = true }
thiserror = { workspace = true } 
log = { workspace = true } 
glyphon = "0.3.0"
lazy_static = "1.4.0"
