[package]
name = "compositor_integration_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
video_compositor = { path = ".." }
reqwest = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
ffmpeg-next = { workspace = true }
compositor_render = { workspace = true }
socket2 = { workspace = true }
bytes = { workspace = true }
rtp = { workspace = true }
webrtc-util = { workspace = true }
crossbeam-channel = { workspace = true }
libtest-mimic = "0.7.0"

[[test]]
name = "integration_test"
path = "src/test_runner.rs"
harness = false
