[package]
name = "compositor_pipeline"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
decklink = ["dep:decklink"]
vk-video = ["dep:vk-video"]

[dependencies]
compositor_render = { workspace = true }
bytes = { workspace = true }
crossbeam-channel = { workspace = true }
anyhow = "1.0.71"
thiserror = { workspace = true }
log = { workspace = true }
ffmpeg-next = { workspace = true }
rtp = { workspace = true }
webrtc-util = { workspace = true }
socket2 = { workspace = true }
rtcp = { workspace = true }
opus = { workspace = true }
rand = { workspace = true }
mp4 = { git = "https://github.com/membraneframework-labs/mp4-rust.git", branch = "preserve-asc" }
reqwest = { workspace = true }
tracing = { workspace = true }
fdk-aac-sys = "0.5.0"
rubato = "0.15.0"
wgpu = { workspace = true }
glyphon = { workspace = true }

[target.x86_64-unknown-linux-gnu.dependencies]
decklink = { path = "../decklink", optional = true }

# platforms that support vulkan are: windows and all non-apple unixes. emscripten is something for the web, where vulkan is not available either
[target.'cfg(any(windows, all(unix, not(target_os = "emscripten"), not(target_os = "ios"), not(target_os = "macos"))))'.dependencies]
vk-video = { path = "../vk-video/", optional = true }
