[package]
name = "compositor_pipeline"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
decklink = ["dep:decklink"]
vk-video = ["dep:vk-video"]

[dependencies]
compositor_render = { workspace = true }
bytes = { workspace = true }
crossbeam-channel = { workspace = true }
anyhow = "1.0.71"
thiserror = { workspace = true }
log = { workspace = true }
ffmpeg-next = { workspace = true }
rtp = { workspace = true }
webrtc-util = { workspace = true }
socket2 = { workspace = true }
rtcp = { workspace = true }
opus = { workspace = true }
rand = { workspace = true }
mp4 = { git = "https://github.com/membraneframework-labs/mp4-rust.git", branch = "preserve-asc" }
reqwest = { workspace = true }
tracing = { workspace = true }
fdk-aac-sys = "0.5.0"
rubato = "0.15.0"
wgpu = { workspace = true }
vk-video = { path = "../vk-video/", optional = true }
glyphon = { workspace = true }
webrtc = "0.11.0"
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
axum = { version = "0.7.7", features = ["macros"] }
tower-http = { version = "0.6.1", features = ["cors"] }
tracing-subscriber = "0.3.18"
url = "2.5.2"
urlencoding = "2.1.3"

[target.x86_64-unknown-linux-gnu.dependencies]
decklink = { path = "../decklink", optional = true }
