[package]
name = "compositor_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.3.0"
thiserror = { workspace = true }
wgpu = { version = "0.16.1", features = ["naga"] }
compositor_chromium = { path = "../compositor_chromium" }
image = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
bytemuck = { version = "1.13.1", features = ["derive"] }
glyphon = "0.3.0"
crossbeam-channel = { workspace = true }
resvg = "0.35.0"
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck"] }
shared_memory = { workspace = true }
naga = "0.12.0"
rand = "0.8.5"

[dev-dependencies]
env_logger = { workspace = true }
