[package]
name = "compositor_render"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
web_renderer = ["dep:compositor_chromium", "dep:shared_memory"]

[dependencies]
pollster = "0.3.0"
thiserror = { workspace = true }
wgpu = { workspace = true }
compositor_chromium = { workspace = true, optional = true }
image = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
bytemuck = { version = "1.13.1", features = ["derive"] }
glyphon = "0.5.0"
crossbeam-channel = { workspace = true }
resvg = "0.35.0"
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck"] }
naga = "0.19.0"
rand = { workspace = true }
tracing = { workspace = true }
shared_memory = { workspace = true, optional = true }
