[package]
name = "compositor_snapshot_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compositor_common = { path = "../compositor_common" }
compositor_render = { path = "../compositor_render" }
serde = { workspace = true }
serde_json = { workspace = true }
# TODO: Temporary
anyhow = { workspace = true }
