[package]
name = "compositor_web"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
compositor_render = { workspace = true }
compositor_api = { workspace = true }
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
tracing = { workspace = true }
tracing-subscriber = "0.2.19"
log = { workspace = true }
wasm-log = "0.3.1"
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "Element",
    "CanvasRenderingContext2d",
    "ImageData"
] }
serde = { workspace = true }
serde-wasm-bindgen = "0.6.5"
wgpu = { workspace = true }
crossbeam-channel = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
glyphon = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
