[package]
name = "generate"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["web_renderer" ]
decklink = ["smelter/decklink"]
web_renderer = ["smelter/web_renderer"]

[dependencies]
smelter = { workspace = true }
compositor_api = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ffmpeg-next = { workspace = true }
compositor_render = { workspace = true }
socket2 = { workspace = true }
bytes = { workspace = true }
rtp = { workspace = true }
rtcp = { workspace = true }
webrtc-util = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
opus = { workspace = true }
pitch-detection = "0.3.0"
rand = { workspace = true }
schemars = { workspace = true}
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tokio = { workspace = true }
