[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
update_snapshots = []

[dependencies]
live_compositor = { path = ".." }
reqwest = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
ffmpeg-next = { workspace = true }
compositor_render = { workspace = true }
socket2 = { workspace = true }
bytes = { workspace = true }
rtp = { workspace = true }
rtcp = { workspace = true }
webrtc-util = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
opus = { workspace = true }
pitch-detection = "0.3.0"
rand = { workspace = true }
