[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["web_renderer"]
update_snapshots = []
decklink = ["smelter/decklink"]
web_renderer = [
    "dep:compositor_chromium",
    "compositor_render/web_renderer",
    "smelter/web_renderer",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
smelter = { workspace = true }
compositor_api = { workspace = true }
compositor_pipeline = { workspace = true }
compositor_chromium = { workspace = true, optional = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ffmpeg-next = { workspace = true }
compositor_render = { workspace = true }
socket2 = { workspace = true }
bytes = { workspace = true }
rtp = { workspace = true }
rtcp = { workspace = true }
webrtc-util = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
opus = { workspace = true }
pitch-detection = "0.3.0"
rand = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
signal-hook = { workspace = true }
tokio-tungstenite = "0.21.0"
wgpu = { workspace = true }
image = { workspace = true }
regex = "1.10.6"
